# openscm-runner

./: .bandit.yml  .codecov.yml  .copier-answers.yml  .coveragerc  .env.sample  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug.md  default.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci-cd-workflow.yml  ci.yaml  deploy.yaml  install.yaml  release.yaml  test-conda-install.yml  test-pypi-install.yml
changelog/: 85.internal.md  88.improvement.md  89.breaking.md  91.trivial.md  README.md
docs/source/: changelog.md  conf.py  development.md  development.rst  index.md  index.rst  notebooks.md  settings.rst  utils.rst
docs/source/api/: openscm_runner.adapters.base.rst  openscm_runner.adapters.ciceroscm_adapter.ciceroscm.rst  openscm_runner.adapters.ciceroscm_adapter.ciceroscm_wrapper.rst  openscm_runner.adapters.ciceroscm_adapter.make_scenario_files.rst  openscm_runner.adapters.ciceroscm_adapter.read_results.rst  openscm_runner.adapters.ciceroscm_adapter.rst  openscm_runner.adapters.ciceroscm_adapter.write_parameter_files.rst  openscm_runner.adapters.ciceroscm_py_adapter.ciceroscmpy.rst  openscm_runner.adapters.ciceroscm_py_adapter.cscmpy_wrapper.rst  openscm_runner.adapters.ciceroscm_py_adapter.make_scenario_data.rst  openscm_runner.adapters.ciceroscm_py_adapter.read_results.rst  openscm_runner.adapters.ciceroscm_py_adapter.rst  openscm_runner.adapters.fair_adapter.fair_adapter.rst  openscm_runner.adapters.fair_adapter.rst  openscm_runner.adapters.magicc7.magicc7.rst  openscm_runner.adapters.magicc7.rst  openscm_runner.adapters.rst  openscm_runner.adapters.utils.cicero_utils.cicero_forcing_postprocessing_common.rst  openscm_runner.adapters.utils.cicero_utils.make_scenario_common.rst  openscm_runner.adapters.utils.cicero_utils.rst  openscm_runner.adapters.utils.rst  openscm_runner.operations.rst  openscm_runner.progress.rst  openscm_runner.rst  openscm_runner.run.rst  openscm_runner.settings.rst  openscm_runner.testing.rst  openscm_runner.utils.rst
docs/source/notebooks/: basic-demo.py  getting-started.py
docs/source/notebooks/cicero-scm/: run-ciceroscm.py  run-ciceroscmpy.py
docs/source/notebooks/fair/: fair-gmst-ohu-factors.py  run-fair.py
docs/source/notebooks/magicc/: run-magicc.py
notebooks/: climate-assessment.ipynb  fair-gmst-ohu-factors.ipynb  getting-started.ipynb  run-ciceroscm.ipynb  run-ciceroscmpy.ipynb  run-fair-2300.ipynb  run-fair.ipynb  run-magicc.ipynb
scripts/: get_rcmip_data.py  rewrite-rst-changelog.py  test-install.py  test_install.py  test_run_magicc7.py
src/openscm_runner/: __init__.py  _version.py  progress.py  run.py  settings.py  testing.py  utils.py
src/openscm_runner/adapters/: __init__.py  base.py  magicc7.py
src/openscm_runner/adapters/ciceroscm_adapter/: __init__.py  _run_ciceroscm_parallel.py  _utils.py  ciceroscm.py  ciceroscm_wrapper.py  make_scenario_files.py  read_results.py  write_parameter_files.py
src/openscm_runner/adapters/ciceroscm_adapter/utils_templates/: __init__.py  pam_RCMIP_test_klimsensdefault.scm  ssp245_em_RCMIP.txt
src/openscm_runner/adapters/ciceroscm_adapter/utils_templates/run-dir/: scm_vCH4fb
src/openscm_runner/adapters/ciceroscm_adapter/utils_templates/run_dir/: scm_vCH4fb_bfx  ssp245_conc_RCMIP.txt
src/openscm_runner/adapters/ciceroscm_adapter/utils_templates/run_dir/input_OTHER/NATEMIS/: natemis_ch4.txt
src/openscm_runner/adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFLUC/: IPCC_LUCalbedo.txt
src/openscm_runner/adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFSUN/: solar_IPCC.txt
src/openscm_runner/adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFVOLC/: meanVOLCmnd_ipcc_NH.txt
src/openscm_runner/adapters/ciceroscm_py_adapter/: __init__.py  _compat.py  _run_cscmpy_parallel.py  _utils.py  ciceroscmpy.py  cscmpy_wrapper.py  gases_vupdate_2022_AR6.txt  make_scenario_data.py  read_results.py  utils_templates
src/openscm_runner/adapters/fair/: .__init__.py.swp  __init__.py  _run_fair.py  fair.py
src/openscm_runner/adapters/fair2/: __init__.py  _run_fair.py  fair2.py
src/openscm_runner/adapters/fair_adapter/: _compat.py  _run_fair.py  _scmdf_to_emissions.py  fair_adapter.py  natural-emissions-and-forcing.csv  rcmip-emissions-annual-means-v5-1-0-historical-ssp245.csv
src/openscm_runner/adapters/magicc7/: __init__.py  _compat.py  _magicc_instances.py  _parallel_process.py  _run_magicc_parallel.py  magicc7.py
src/openscm_runner/adapters/utils/: __init__.py  _common_cicero_utils.py  _parallel_process.py
src/openscm_runner/adapters/utils/cicero_utils/: __init__.py  _run_ciceroscm_parallel.py  cicero_forcing_postprocessing_common.py  make_scenario_common.py
tests/: conftest.py  notebook-tests.cfg
tests/integration/: base.py  test_ciceroSCM.py  test_cscmpy.py  test_fair1X.py  test_magicc7.py  test_run_multimodel.py
tests/integration/test_ciceroSCM/: test_run_False_.csv
tests/integration/test_cscmpy/: test_run_True_.csv
tests/integration/test_fair1X/: test_run_1_.csv
tests/integration/test_magicc7/: test_run.csv
tests/integration/test_run_multimodel/: test_multimodel_run.csv
tests/test-data/: clean_scenarios.csv  clean_scenarios_full_ssps.csv  rcmip-emissions-annual-means-v5-1-0-ssp370-world.csv  rcmip_scen_ssp_world_emissions_2300.csv  rcmip_scen_ssp_world_emissions_2600.csv
tests/test-data/expected-integration-output/: expected_ciceroscm_test_run_output.json  expected_ciceroscmpy_test_run_output.json  expected_fair1X_test_run_output.json  expected_magicc7_test_run_output.json  expected_run_multimodel_output.json
tests/unit/: test_cicero_utils.py  test_fair1X.py  test_fair1x_utils.py  test_installation.py  test_progress.py  test_run.py  test_settings.py  test_utils.py
tests/unit/adapters/: test_adapters.py
