[metadata]
name = openscm-runner
keywords = openscm, runner, python, simple, climate, model
author = Zeb Nicholls, Robert Gieseke, Jared Lewis, Sven Willner, Chris Smith
author_email = zebedee.nicholls@climate-energy-college.org, robert.gieseke@pik-potsdam.de, jared.lewis@climate-energy-college.org, sven.willner@pik-potsdam.de, c.j.smith1@leeds.ac.uk
license = 3-Clause BSD License

description = Thin wrapper to run simple climate models (emissions driven runs only)
description_file = README.rst
long_description_content_type = text/x-rst
long_description =
    OpenSCM-Runner
    ==============

    OpenSCM-Runner is a thin wrapper to run simple climate models with a
    unified interface.
    At present, it supports emissions driven runs only.
    This wrapper is implemented while
    `OpenSCM <https://github.com/openscm/openscm>`_ is still a work in
    progress.

url = https://github.com/openscm/openscm-runner
# full list at https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    click
    openscm-units >= 0.5.0
    pyam-iamc
    python-dotenv
    scmdata >= 0.7.4
    tqdm
    importlib-metadata; python_version < '3.8'

[options.packages.find]
where = src

[options.extras_require]
fair =
    fair

magicc =
    pymagicc >= 2.0.0, < 3

models =
    %(fair)s
    %(magicc)s

notebooks =
    ipywidgets
    notebook
    seaborn

tests =
    codecov
    coverage
    nbval
    pytest-cov
    pytest>=4.0
    xlrd

docs =
    sphinx >= 1.4
    sphinx_rtd_theme
    sphinx-click

dev =
    bandit
    black == 22.3.0
    black-nb
    flake8
    isort > 5
    mypy
    nbdime
    pydocstyle
    pylint >= 2.4.4
    %(docs)s
    %(notebooks)s
    %(tests)s
    %(models)s

[options.package_data]
openscm_runner =
    adapters/fair_adapter/*.csv
    adapters/ciceroscm_adapter/utils_templates/*.txt
    adapters/ciceroscm_adapter/utils_templates/pam_RCMIP_test_klimsensdefault.scm
    adapters/ciceroscm_adapter/utils_templates/run_dir/*.txt
    adapters/ciceroscm_adapter/utils_templates/run_dir/scm_vCH4fb
    adapters/ciceroscm_adapter/utils_templates/run_dir/input_OTHER/NATEMIS/*.txt
    adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFLUC/*.txt
    adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFSUN/*.txt
    adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFVOLC/*.txt

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = openscm_runner
profile = black

[mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[pydocstyle]
# D213 - Multi-line docstring summary should start at the second line
# D402 - First line should not be the signature of the function
add_select = D213, D402
# D200 - One-line docstring should fit on one line with quotes
# D205 - 1 blank line required between summary line and description
# D400 - First line should end with a period
add_ignore = D200, D205, D400
convention = numpy
inherit = false
match = (?!test_|_version).*\.py

[tool:pytest]
testpaths = tests
